# tdcr-pinn

./: .gitignore  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: install.yml
Required/: install_pytdcrsv.sh
Required/tdcr-lilge-binding/: MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini  tox.zsh
Required/tdcr-lilge-binding/RequiredFiles/: pythonM1
Required/tdcr-lilge-binding/doc/: StaticRobotModel.rst  conf.py  index.rst  trajectory_generation.rst  visualize_robot.rst
Required/tdcr-lilge-binding/jupyter_lab/: minimal_example.ipynb
Required/tdcr-lilge-binding/tests/: cluster.py  test_mp_static_robot_model.py  test_simple_calibration.py  test_static_robot_model.py  test_tdrpyb.py  test_visualize_robot.py
scripts/: bootstrap.sh
src/pytdcrpinn/: __init__.py  __main__.py  _helper_fn.py  _losses.py  _losses_fn.py  _physics_fn.py  datasl.py  evaluate_model.py  main.py  paper_plots.py  pinn_nn.py  robot_specs.py  run_training.py  train_nn.py
src/pytdcrpinn/configs/: run_training_prec_ref_config.json
src/pytdcrpinn/evaluate_models/: plot_acts.npy
src/pytdcrpinn/reference/: bsn384_btm192_phirange_300_360_taum2.51_forces_pairing_v2_1e-11_1e-4_act_sL.npy  bsn384_btm192_phirange_300_360_taum2.51_forces_pairing_v2_1e-11_1e-4_act_tau_max.npy  bsn384_btm192_phirange_300_360_taum2.51_forces_pairing_v2_1e-11_1e-4_dataSL_testing.pt  bsn384_btm192_phirange_300_360_taum2.51_forces_pairing_v2_1e-11_1e-4_dataSL_training.pt  bsn384_btm192_phirange_300_360_taum2.51_forces_pairing_v2_1e-11_1e-4_dataSL_validation.pt  bsn384_btm192_phirange_300_360_taum2.51_forces_pairing_v2_1e-11_1e-4_i0_testing.pt  bsn384_btm192_phirange_300_360_taum2.51_forces_pairing_v2_1e-11_1e-4_i0_training.pt  bsn384_btm192_phirange_300_360_taum2.51_forces_pairing_v2_1e-11_1e-4_i0_validation.pt  bsn384_btm192_phirange_300_360_taum2.51_forces_pairing_v2_1e-11_1e-4_s0.pt  bsn384_btm192_phirange_300_360_taum2.51_forces_pairing_v2_1e-11_1e-4_sL.pt  bsn384_btm192_phirange_300_360_taum2.51_forces_pairing_v2_1e-11_1e-4_sL_data.pt  bsn384_btm192_phirange_300_360_taum2.51_forces_pairing_v2_1e-11_1e-4_sL_testing.pt  bsn384_btm192_phirange_300_360_taum2.51_forces_pairing_v2_1e-11_1e-4_sL_training.pt  bsn96_btm96_phirange_300_360_taum3.51__act_sL.npy  (+36 more)
(+175 files in other folders)
