[build-system]
requires = ["setuptools", "setuptools-scm", "wheel", "pip"]
build-backend = "setuptools.build_meta"

[project]
name = "tdcrpinn"
authors = [
    {name = "Martin Bensch", email = "Martin.Bensch@imes.uni-hannover.de"},
]
description = "PINN implementation for learning Cosserat rod statics"

readme = "README.md"

requires-python = ">=3.9"

keywords = ["Pytorch", "PINN", "ICRA 2024"]

license = {text = "BSD-3-Clause"}

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Mac, Linux",
]
version= "1.0.1"
dependencies = [
    "torch",
    "torchvision",
    "jupyterlab",
    "matplotlib",
    "pandas",
    "seaborn",
    "scipy",
    "tqdm",
#    "tensorboard",
    "torch_tb_profiler",
    "memory_profiler",
    "pandasgui",
    "scienceplots",
    "numpy<2"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pytdcrpinn*"]